--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -37,12 +37,33 @@ $font: 'Dosis', sans-serif;
   }
 }
 
-.section {
-  background: $c-white;
-}
 
 .container {
   width: 100%;
   max-width: 100%;
   margin: 0 auto;
+}
+
+.appindex {
+  display: flex;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+  padding: 3rem;
+  font-family: $font;
+}
+
+.button {
+  justify-content: center;
+  margin: 0 auto;
+  padding: 0.5rem;
+  border-style: none;
+  border-radius: 5%;
+  outline: none;
+  background: $c-primary;
 }
