--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -75,12 +75,13 @@ $font: 'Dosis', sans-serif;
   justify-content: space-between;
   width: 100%;
   padding-bottom: 1rem;
+  border-top: 0.025rem solid $c-secondary;
 }
 
 .button {
   display: flex;
   justify-content: space-between;
-  margin: 0 0.5rem;
+  margin: 0.5rem 0.5rem 0;
   padding: 0.5rem;
   border-style: none;
   border-radius: 5%;
@@ -120,6 +121,11 @@ form {
   border-bottom: 0.025rem solid $c-secondary;
 }
 
+.username {
+  color: $c-secondary;
+  text-decoration: underline;
+}
+
 // users
 .grid {
   display: flex;
@@ -141,10 +147,7 @@ form {
     margin: 0 0.5rem;
   }
 
-  &__username {
-    color: $c-secondary;
-    text-decoration: underline;
-  }
+
 }
 
 .heading {
@@ -162,14 +165,58 @@ form {
 .newcard {
   min-width: 20rem;
   max-width: 20rem;
-  margin: 1rem;
+  max-height: 19rem;
+  margin-right: 2rem;
   background: $c-pure-white;
   font-family: $font;
+  box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
+
+  &__title {
+    margin: 1rem 0.5rem 0;
+  }
+
+  &__middle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0 auto;
+
+  }
+
+  &__field {
+    margin: 1rem 0.5rem;
+    border: 0;
+    border-bottom: 0.15rem solid $c-secondary;
+    background: $c-white;
+  }
 }
 
 .happeningcard {
-  display: flex;
-  min-width: 40rem;
-  max-width: 40rem;
+  min-width: 38rem;
+  max-width: 38rem;
+  background: $c-pure-white;
+  font-family: $font;
+  box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
 
+  &__main {
+    background: $c-pure-white;
+  }
+
+  &__new {
+    margin: 0.5rem;
+    padding: 0.5rem;
+    background: $c-white;
+    color: $c-secondary;
+
+    &--words {
+      display: flex;
+      justify-content: center;
+      margin: 0 auto;
+    }
+  }
+
+  &__post {
+    padding: 1rem;
+    border-top: 0.025rem solid $c-secondary;
+  }
 }
