--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -43,7 +43,6 @@ $font: 'Dosis', sans-serif;
   justify-content: center;
   margin: 0 auto;
   padding: 2rem;
-
 }
 
 // multiple
@@ -68,6 +67,7 @@ $font: 'Dosis', sans-serif;
   transform: translate(-50%, -50%);
   background: $c-pure-white;
   font-family: $font;
+  box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
 }
 
 .buttons {
@@ -118,7 +118,7 @@ form {
 .category {
   width: 100%;
   margin: 0.5rem 0;
-  border-bottom: 0.025rem solid $c-secondary;
+  border-bottom: 0.15rem solid $c-secondary;
 }
 
 .username {
@@ -127,10 +127,12 @@ form {
 }
 
 // users
+
+
 .grid {
   display: flex;
   flex-wrap: wrap;
-  margin: -1rem;
+  margin: 1rem;
 }
 
 .usercard {
@@ -146,8 +148,6 @@ form {
     height: 5rem;
     margin: 0 0.5rem;
   }
-
-
 }
 
 .heading {
@@ -217,6 +217,6 @@ form {
 
   &__post {
     padding: 1rem;
-    border-top: 0.025rem solid $c-secondary;
+    border-top: 0.15rem solid $c-secondary;
   }
 }
