--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -10,6 +10,7 @@ $c-secondary: #4bb5c1;
 $c-secondary-light: #7fc6bc;
 $c-white: #edf7f2;
 $c-pure-white: #fff;
+$c-red: #d13513;
 
 $m-gutter: 1rem;
 $m-max-width: 60rem;
@@ -34,6 +35,17 @@ $font: 'Dosis', sans-serif;
 
   &__words {
     padding: 0 0.5rem;
+  }
+}
+
+.nav-link {
+  outline: none;
+  background: $c-primary;
+  color: $c-pure-white;
+  text-decoration: none;
+
+  &-right {
+    margin-right: 0.5rem;
   }
 }
 
@@ -75,7 +87,6 @@ $font: 'Dosis', sans-serif;
   justify-content: space-between;
   width: 100%;
   padding-bottom: 1rem;
-  border-top: 0.025rem solid $c-secondary;
 }
 
 .button {
@@ -89,11 +100,20 @@ $font: 'Dosis', sans-serif;
   background: $c-primary;
   color: $c-pure-white;
   text-decoration: none;
+
+  &:hover {
+    background: $c-secondary;
+  }
 }
 
 .button-white {
   background: $c-white;
   color: $c-secondary;
+
+  &:hover {
+    background: $c-primary;
+    color: $c-pure-white;
+  }
 }
 
 form {
@@ -103,6 +123,7 @@ form {
 .field {
   width: 100%;
   border-style: none;
+  outline: none;
 }
 
 .nav-thing {
@@ -126,8 +147,12 @@ form {
   text-decoration: underline;
 }
 
-// users
+.alert {
+  background: $c-red;
+  color: $c-pure-white;
+}
 
+// users
 
 .grid {
   display: flex;
@@ -136,12 +161,16 @@ form {
 }
 
 .usercard {
-  display: flex;
   flex-basis: calc(100% / 3 - 2rem);
-  margin: 1rem;
-  padding: 1rem;
-  background: $c-pure-white;
-  box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
+  flex-grow: 1;
+  margin: 0 1rem;
+
+  &__info {
+    display: flex;
+    padding: 1rem;
+    background: $c-pure-white;
+    box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
+  }
 
   &__pic {
     width: 5rem;
@@ -160,13 +189,15 @@ form {
 // Ribbits
 .outer {
   display: flex;
+  justify-content: space-between;
+  margin: 0 auto;
 }
 
 .newcard {
   min-width: 20rem;
   max-width: 20rem;
   max-height: 19rem;
-  margin-right: 2rem;
+  margin-left: 0;
   background: $c-pure-white;
   font-family: $font;
   box-shadow: 0 0 0.5rem 0 rgba(#000, 0.4);
